# dmach-externals

./: .gitmodules  CMakeLists.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: build.yml
gradle/: libs.versions.toml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/cyclone/: README.txt  shared.h
src/main/cpp/zexy/: LICENSE.txt
